Introduce program linkage
The C++ specification talks in terms of module, external, internal, and no linkage. These linkages in C++ refer to translation units. For HLSL, we have some differences in how programs are built and linked that can't be fully expressed in that language.

Specifically, we have a notion of a program-export (entry functions, export keyword), that denotes a linkage that is more external than just cross translation unit.

This change introduces a term _program linkage_ to refer to names that have linkage outside a linked or freestanding program.

--- a/specs/language/declarations.tex
+++ b/specs/language/declarations.tex
@@ -36,11 +36,11 @@
   \texttt{export}\br
 \end{grammar}
 
-\p The \texttt{export} specifier denotes that the function has \textit{external linkage} (\ref{Basic.Linkage.External}).
+\p The \texttt{export} specifier denotes that the function has program linkage (\ref{Basic.Linkage.Program}).
 
 \p The \texttt{export} specifier cannot be used on functions directly or indirectly within an unnamed namespace.
 
-\p Functions with \textit{external linkage} can also be specified in \textit{export-declaration-group} (\ref{Decl.Export}).
+\p Functions with program linkage can also be specified in \textit{export-declaration-group} (\ref{Decl.Export}).
 
 \p If a function is declared with an \texttt{export} specifier then all redeclarations of the same function must also use the \texttt{export} specifier or be part of \textit{export-declaration-group} (\ref{Decl.Export}).
 
