[NFC] Fix a broken reference
This ref target was misspelled.

--- a/specs/language/overloading.tex
+++ b/specs/language/overloading.tex
@@ -138,7 +138,7 @@ candidate set and argument expression list.
 \Sub{Viable Functions}{Overload.Res.Viable}
 
 \p Given the candidate set and argument expressions as determined by the
-relevant context (\ref{Over.Res.Sets}), a subset of viable functions can be
+relevant context (\ref{Overload.Res.Sets}), a subset of viable functions can be
 selected from the candidate set.
 
 \p A function candidate \(F(P_0 ... P_m)\) is not a viable function for a call
