--- a/specs/language/declarations.tex
+++ b/specs/language/declarations.tex
@@ -48,6 +48,7 @@
 \Sec{Initializers}{Decl.Init}
 \Sec{Function Definitions}{Decl.Function}
 \Sec{Attributes}{Decl.Attr}
+\Sub{Semantic Annotations}{Decl.Attr.Semantic}
 \Sub{Entry Attributes}{Decl.Attr.Entry}
 
 \Sec{Export Declarations}{Decl.Export}
