--- a/specs/language/basic.tex
+++ b/specs/language/basic.tex
@@ -140,7 +140,7 @@ called \textit{freestanding}.
 
 \p A program is said to be \textit{fully linked}, when it contains no
 \textit{unresolved external} declarations, and all \textit{exported}
-declarations are entry point declarations (\ref{Basic.start}). A program is said
+declarations are entry point declarations (\ref{Basic.Start}). A program is said
 to be \textit{partially linked}, when it contains at least one unresolved
 external declaration or at least one exported declaration that is not an entry
 point.
