Fix element range specifications

--- a/specs/language/conversions.tex
+++ b/specs/language/conversions.tex
@@ -142,7 +142,7 @@ smaller dimensions or to scalar values by dropping trailing elements.
 \end{itemize}
 
 \p The resulting value of vector truncation is comprised of elements \( [0..y)
-\), dropping elements \( [y+1..x) \).
+\), dropping elements \( [y..x) \).
 
 \p A prvalue of type \texttt{matrix<T,x,y>} can be converted to a prvalue of
 type:
