Add resource chapter documenting buffers and bindings
This adds a resource chapter that documents typed and raw buffers including their methods and compatible operators along with short descriptions of their functionality. It also adds a description of binding annotations for all types. Stub sections are included for constant buffers and samplers, but no information is provided as yet.

Fixes https://github.com/llvm/wg-hlsl/issues/55
Fixes https://github.com/llvm/wg-hlsl/issues/56

--- a/specs/language/hlsl.tex
+++ b/specs/language/hlsl.tex
@@ -91,6 +91,7 @@
 \input{statements}
 \input{declarations}
 \input{overloading}
+\input{resources}
 
 \input{placeholders} % Declare placeholder references
 
