Use numbered list

--- a/specs/language/overloading.tex
+++ b/specs/language/overloading.tex
@@ -325,7 +325,7 @@ sequence with a \textbf{Conversion} conversion, the conversion is ranked as
 rank of each conversion.
 
 \p Conversion sequence ranks are ordered from better to worse as:
-\begin{itemize}
+\begin{enumerate}
   \item \textbf{Exact Match}
   \item \textbf{Extension}
   \item \textbf{Promotion}
@@ -335,7 +335,7 @@ rank of each conversion.
   \item \textbf{Truncation}
   \item \textbf{Promotion Truncation}
   \item \textbf{Conversion Truncation}
-\end{itemize}
+\end{enumerate}
 
 % TODO: Define user-defined conversion sequences. DXC doesn't actually support
 % these because we don't resolve overloads for user-defined conversion
