--- a/specs/language/introduction.tex
+++ b/specs/language/introduction.tex
@@ -283,7 +283,7 @@ will represent a maximal sequence of adjacent bit-fields all having nonzero
 width.
 
 \p Each read or write to a memory location is called a \textit{memory access}.
-Operations that perform memory accesses are called \textit{memory operation}. A
+Operations that perform memory accesses are called \textit{memory operations}. A
 memory operation may operate on one or more memory locations. A memory operation
 must not alter memory at a location not contained in the memory location set it
 is operating on\footnote{Two subtle notes here: (1) A bit-field's memory location
