--- a/specs/language/introduction.tex
+++ b/specs/language/introduction.tex
@@ -285,7 +285,7 @@ width.
 \p Each read or write to a memory location is called a \textit{memory access}.
 Operations that perform memory accesses are called \textit{memory operations}. A
 memory operation may operate on one or more memory locations. A memory operation
-must not alter memory at a location not contained in the memory location set it
+must not alter memory at a location not contained in the set of memory locations it
 is operating on\footnote{Two subtle notes here: (1) A bit-field's memory location
 includes adjacent bit-fields, so reads and writes to bit-fields are expected to
 read and write adjacent memory if they're within the same set of locations, (2)
