--- a/specs/language/introduction.tex
+++ b/specs/language/introduction.tex
@@ -353,6 +353,6 @@ during execution.
 
 \SubSub{Constant Memory}{Intro.Memory.Spaces.Overlap}
 
-\p The \textbf{Thread} and \textbf{Thread Group} memory spacees may not overlap
+\p The \textbf{Thread} and \textbf{Thread Group} memory spaces may not overlap
 with any other memory space. All addresses in either memory space are implied to
 not alias any address in any other memory space.
