--- a/specs/language/introduction.tex
+++ b/specs/language/introduction.tex
@@ -310,8 +310,8 @@ the memory space. The two values need not be the same, although they may be.
 \begin{note}
   \p Memory accesses for many resource types in \gls{dx} operate on 128-bit
   slots aligned on 128-bit boundaries. In the terms of this specification it
-  would be said that those memory spaces have a 128-byte \textit{line width},
-  and a 128-byte \textit{minimum alignment}.
+  would be said that those memory spaces have a 128-bit \textit{line width},
+  and a 128-bit \textit{minimum alignment}.
 \end{note}
 
 \p A memory location in any space may overlap with another memory location in
