Adding missing placeholder

--- a/specs/language/placeholders.tex
+++ b/specs/language/placeholders.tex
@@ -7,6 +7,7 @@
 \Ch{Classes}{Classes}
 \Sec{Static Members}{Classes.Static}
 \Sec{Conversions}{Classes.Conversions}
+\Sec{Bit-fields}{Classes.BitFields}
 \Ch{Templates}{Template}
 \Sec{Template Instantiation}{Template.Inst}
 \Sec{Partial Ordering of Function Templates}{Template.Func.Order}
