--- a/specs/language/declarations.tex
+++ b/specs/language/declarations.tex
@@ -78,7 +78,7 @@ initializers regardless of the context.
 
 \p The subobjects of an aggregate have a defined order. For vectors and arrays
 the order is increasing subscript order. For matrices it is increasing subscript
-order with the with the subscript nesting such that in the notation
+order with the subscript nesting such that in the notation
 \texttt{Mat[M][N]}, the ordering is \(Mat[0][0]...Mat[0][N]...
 Mat[M][0]...Mat[M][N]\). For classes the order is base class, followed by member
 subobjects in declaration order.
